[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://src/scripts/player/basic_player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 50.0

[node name="BasicPlayer" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0, 0.7, 1, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_1")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="ResourceCollector" type="Area2D" parent="."]
collision_layer = 2    # Layer 2 for player
collision_mask = 16    # Layer 5 for resources
monitoring = true
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceCollector"]
shape = SubResource("CircleShape2D_2")
debug_color = Color(0.0, 0.643137, 0.309804, 0.419608)

[connection signal="area_entered" from="ResourceCollector" to="." method="_on_resource_collector_area_entered"] 